--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
-<app-root></app-root>
+<app-root>Initierar Aeon...</app-root>
 
 
 </body>
