--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -72,7 +72,7 @@
     <svg class="spinner" viewBox="25 25 50 50">
       <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
     </svg>
-    <img src="assets\img\Aeon.png">
+    <img src="assets\img\Aeon.png" style="box-shadow: 0 8px 6px -6px black;">
   </div></app-root>
 </body>
 <!-- Optional JavaScript -->
