--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -66,7 +66,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
-<app-root>      <!-- loading layout replaced by app after startupp -->
+<app-root>      <!-- Replaced after load loading Aeon -->
   <div class="app-loading">
     <div class="logo"></div>
     <svg class="spinner" viewBox="25 25 50 50">
